Replace joda-time with java time